--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lirc_web": "./app.js"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --require should --require test/common.js --reporter dot test/*.js",
+    "test": "NODE_ENV=test mocha --require should --require test/common.js --reporter dot test/*.js test/**/*.js",
     "lint-js": "eslint app.js lib/**"
   },
   "repository": {
